--- a/styles/style.css
+++ b/styles/style.css
@@ -4,3 +4,140 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+                            /* INICIO DEL HEADER */
+header{
+    display: flex;
+    align-items: center;
+    background-color: #23252b;
+    height: 70px;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    
+}
+/* PRIMERA BARRA DE NAVEGACION */
+header .nav1{
+    display: flex;
+    align-items: center;
+    width: 50%;
+}
+header .nav1 .logo{
+    color: rgb(2, 139, 202);
+    font-size: 30px;
+    margin-left: 120px;
+    margin-right: 15px;
+    text-decoration: none;
+    transition: .7s;
+}
+header .nav1 nav{
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+header .nav1 nav a{
+    color: rgb(194, 194, 194);
+    padding: 10px 5px;
+    width: 170px;
+    text-align: center;
+    text-decoration: none;
+    transition: .3s;
+}
+header .nav1 nav a:hover{
+    background-color: rgb(0, 116, 170);
+    color: white;
+    border-radius: 20px;
+}
+header .nav1 i{
+    color: white;
+    font-size: 25px;
+    display: none;
+}
+
+/* SEGUNDA BARRA DE NAVEGACION */
+header .nav2{
+    width: 40%;
+    display: flex;
+    justify-content: end;
+}
+header .nav2 div .fondo{
+    color: white;
+    padding: 10px 20px;
+    border-radius: 15px;
+    width: 120px; 
+    margin-right: 10px;
+    text-decoration: none;
+    background-color: rgb(66, 66, 66);
+}
+header .nav2 div .fondo:hover{
+    box-shadow: 0 0 15px rgb(0, 116, 170);
+}
+header .nav2 div .fondo2{
+    color: white;
+    padding: 10px 20px;
+    border-radius: 15px;
+    width: 120px; 
+    text-decoration: none;
+    background-color: rgb(0, 116, 170);
+}
+header .nav2 div .fondo2:hover{
+    box-shadow: 0 0 15px rgb(180, 180, 180);
+    
+}
+/* FIN DE LA SEGUNDA BARRA DE NAVEGACION */
+
+/* RESPONSIVE DEL HEADER */
+@media(max-width: 1150px){
+    header .nav1{
+        width: 55%;
+    }
+    header .nav1 .logo{
+        margin-left: 50px;
+    }
+}
+@media(max-width: 950px){
+    header .nav1{
+        width: 44%;
+    }
+    header .nav1 i{
+        display: block;
+        margin-left: 30px;
+    }  
+    header .nav1 nav{
+        position: fixed;
+        display: inline-block;       
+        line-height: 30px;
+        width: 100%;
+        height: 35vh;
+        top: 70px;
+        margin-left: -100%;
+        background-color: #23252b;
+        transition: all .2s;
+    }
+    header .nav1 nav a{
+        display:block;
+        margin: 0 auto;
+    }
+    header .nav1 nav.mobile-menu{
+        margin-left: 0;
+        transition: all .5s;
+    }
+    header .nav2{
+        width: 48%;
+    }
+}
+
+@media(max-width: 450px){
+    header .nav1 .logo{
+        margin-left: 20px;
+    }
+    header .nav1 i{
+        display: flex;
+        margin-left: 5px;
+    }
+    header .nav2{
+        width: 50%;
+    }
+}
+                       /* FIN DEL HEADER */
