--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    caret-color: transparent;
 }
 
 body{
@@ -160,17 +161,187 @@ header .nav2 div .fondo2:hover{
 }
 /* FIN DEL RESPONSIVE HEADER */
 
-/* Estilos para la targeta en el index.html */
+/* SLIDER INDEX.HTML*/
+#container-slider
+{
+    position: relative;
+    display: block;
+    width: 100%;
+}
+#slider {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100vh;
+    min-height: 500px;
+}
+#slider li {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100%;
+    height: 100%;
+    display: block;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+    z-index: -1;
+    opacity: 0;
+}
+#container-slider .arrowPrev, #container-slider .arrowNext{
+    font-size: 30pt;
+    color: rgba(204, 204, 204, 0.65);
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    left: 50px;
+    z-index: 2; 
+}
+#container-slider .arrowNext {
+    left: initial;
+    right: 50px !important;
+}
+
+#container-slider a i:hover {
+	color: rgba(2, 134, 196, 0.836);
+}
+.content_slider{
+    padding: 15px 30px;
+    color: #FFF;
+    width: 100%;
+    height: 100%;
+}
+.content_slider div{
+    text-align: center;
+}
+.content_slider h2{
+    /* font-family: 'arial'; */
+    font-size: 30pt;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+	margin: auto;
+    margin-bottom: 20px;
+}
+.content_slider p {
+    font-size: 15pt;
+    font-family: 'arial';
+    color: #FFF;
+    margin-bottom: 40px;
+}
+#slider li .content_slider{
+    background: rgba(0, 0, 0, 0.50);
+    padding: 10px 125px;
+}
+.content_slider{
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btnSlider{
+    color: #FFF;
+    font-size: 15pt;
+    font-family: 'arial';
+    letter-spacing: 1px;
+    padding: 10px 50px;
+    border: 1px solid #CCC;
+    background: rgba(13, 13, 13, 0.55);
+    border-radius: 31px;
+    text-decoration: none;
+    transition: .5s all;
+}
+.btnSlider:hover{
+    background: rgba(0, 116, 170, 0.788);
+    border: 1px solid rgba(0, 116, 170, 0.788);
+}
+.btnSlider:active {
+	background: rgba(0, 116, 170, 0.938);
+}
+
+.listslider {
+    position: absolute;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    left: 50%;
+    bottom: 5%;
+    list-style: none;
+    z-index: 2;
+    transform: translateX(-50%);
+}
+.listslider li {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    cursor: pointer;
+    margin: 0 5px;
+}
+.listslider li a {
+    background: #CCC;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+.item-select-slid {
+    background: #FFF  !important;
+}
+
+@media screen and (max-width: 460px){
+	.content_slider h2 {
+	    font-size: 15pt !important;
+	}
+	.content_slider p {
+	    font-size: 12pt !important;
+	}
+	#container-slider .arrowPrev, #container-slider .arrowNext{
+		font-size: 20pt;
+	}
+	#container-slider .arrowPrev{
+		left: 15px;
+	}
+	#container-slider .arrowNext{
+		right: 15px !important;
+	}
+	#slider{
+		height: 400px;
+		min-height: 400px;
+	}
+	#slider li .content_slider{
+		padding: 10px 35px;
+	}
+	.btnSlider{
+		padding: 10px 30px;
+    	font-size: 10pt;
+	}
+
+}
+/* FIN SLIDER */
+
+/* TARJETAS INDEX.HTML */
 main h2{
 	color: #fff;
 	font-size: 2em;
-	margin: 6% 0 0 10% ;
+	margin: 3% 0 1% 10% ;
 }
 
 
 body section{
 	height: 100%;
 	display: flex;
+	justify-content: center;
 	flex-wrap: wrap;
 }
 
@@ -212,11 +383,29 @@ body section{
 	text-shadow: 0 0 1em black;
 }
 
+/* ---- ----- ----- Media Queries tarjetas index.html ----- ----- ----- */
+@media screen and (max-width: 425px) {
+
+	main h2{
+		text-align: center;
+		margin-left: 0%;
+	}
+
+	.peli-tarjeta{
+		width: 45%;
+		margin: 0.5em;
+	}
+
+	.peli-tarjeta .btn-detalles {
+		padding: 0.4em 0.6em !important;
+	}
+}
+
 /* ---- ----- ----- Estilos para página detalles.html ---- ----- ----- */
 
 .peli-detalles {
 	font-size: 1em;
-	min-height: 10gi0vh;
+	height: 100vh;
 	color: #fff;
 	background: linear-gradient(rgba(0, 0, 0, .50) 0%, rgba(0,0,0,.50) 100%), url(../img/detalles/imgFondo.jpg);
 	background-position: center center;
@@ -229,13 +418,13 @@ body section{
 
 .peli-detalles .contenedor {
 	width: 50%;
-	height: 80%;
+	height: 50%;
 	margin-left: 6%;
 }
 
 .peli-poster{
-	width: 50%; 
-	height: 80%;
+	width: 40%; 
+	height: 50%;
 	border-radius: 0.6em;
 	box-shadow: 0 0 0.6em 0.01em black;
 }
@@ -295,10 +484,19 @@ body section{
 
 }
 
+/* ESTILOS DEL FOOTER */
 .foot{
 	text-align: center;
 	padding: 8px;
 	background-color: #000000; 
 	color: rgb(235, 232, 229); 
-	bottom: 0; 
+	bottom: 0;
+}
+
+.foot a{
+	text-decoration: none;
+}
+.foot a img{
+	border-radius: 0.2em;
+	margin: 0 0.2em 0 0.2em;
 }
