--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 
 body{
     width: 100%;
-    height: 100vh;
+    min-height: 100%;
     background-color: rgb(34, 34, 34);
 	font-family: 'Open Sans', sans-serif;
 }
@@ -20,7 +20,7 @@ header{
     background-color: #23252b;
     height: 70px;
     width: 100%;
-    position: fixed;
+    position: sticky;
     z-index: 100;
     top: 0;
 }
@@ -338,7 +338,7 @@ main h2{
 }
 
 
-body section{
+.contenedor-peli{
 	height: 100%;
 	display: flex;
 	justify-content: center;
@@ -476,6 +476,7 @@ body section{
 	.peli-detalles .contenedor {
 		width: 90%;
 		margin-left: 0;
+        text-align: center;
 	}
 
 	.peli-poster{
@@ -484,12 +485,102 @@ body section{
 
 }
 
+
+/* ESTILOS CONTACTO.HTML */
+.contenedor-contacto{
+    margin: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #FFF;
+}
+
+.contenedor-contacto h2{
+    text-align: center;
+    margin: 0.5em 0;
+    font-size: 3em;
+}
+
+.contenedor-contacto form fieldset{
+    border: none;
+}
+
+.contenedor-contacto form{
+    padding: 2em;
+    border-radius: 1em;
+    background-color: #272b36b2;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2em;
+}
+
+.contenedor-contacto form input{
+    width: 100%;
+    border: 0.2em solid cornflowerblue;
+    border-radius: 0.8em;
+    padding: 2em;
+    margin: 1em 0;
+    caret-color: auto;
+}
+
+.contenedor-contacto form input:focus-visible{
+    border: 0.3em solid rgb(60, 128, 255);
+    padding: 1.7em;
+    outline: 0px;
+}
+
+.contenedor-contacto form textarea{
+    width: 100%;
+    border: 0.2em solid cornflowerblue;
+    border-radius: 0.8em;
+    padding: 2em;
+    margin: 1em 0;
+    caret-color: auto;
+    outline: 0px;
+}
+
+.contenedor-contacto form textarea:focus-visible{
+    border: 0.3em solid rgb(60, 128, 255);
+    padding: 1.7em;
+    outline: 0px;
+}
+
+.contenedor-contacto form input[type=submit]{
+    background-color: cornflowerblue;
+    border: none;
+    padding: 1em 5em;
+}
+
+/* ---- ----- ----- Media Queries contacto.html ----- ----- ----- */
+@media screen and (max-width: 425px) {
+    .contenedor-contacto form{
+        width: 90%;
+    }
+    .contenedor-contacto h2{
+        margin: 0.3em 0;
+        font-size: 2em;
+    }
+    .contenedor-contacto form input{
+        padding: 1em;
+    }
+    .contenedor-contacto form textarea{
+        padding: 1em;
+    }
+}
+
 /* ESTILOS DEL FOOTER */
 .foot{
+    width: 100%;
 	text-align: center;
 	padding: 8px;
 	background-color: #000000; 
 	color: rgb(235, 232, 229); 
+    position: relative;
 	bottom: 0;
 }
 
